# swatahvision

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
annotators/box/: index.html
annotators/color/: index.html
annotators/heatmap/: index.html
annotators/label/: index.html
annotators/trace/: index.html
docs/annotators/: box.md  color.md  heatmap.md  label.md  trace.md
docs/examples/: age_gender.md  count_people_in_zone1.md  heatmap_tracking.md  pose_estimation.md  speed_estimation.md  time_in_zone.md  tracking.md  traffic_analysis.md
docs/getting_started/: install.md
docs/model_zoo/: index.md
docs/overrides/: main.html
docs/runtime/: index.md  onnx.md  openvino.md
docs/stylesheets/: extra.css
docs/trackers/: bytetrack.md
examples/age_gender/: index.html
examples/age_gender_detection/: README.md  age-gender-recognition-retail-0013_openvino.py
examples/count_people_in_zone/: index.html
examples/heatmap_tracking/: index.html
examples/pose_estimation/: README.md  index.html  movenet_onnx.py  requirements.txt
examples/speed_estimation/: README.md  index.html  requirements.txt  yolov11x-1280_onnx.py  yolov11x-1280_openvino.py
examples/time_in_zone/: index.html
examples/tracking/: index.html
examples/traffic_analysis/: index.html
getting_started/install/: index.html
model_card/mobilenetv2/: index.html
model_zoo/: index.html
model_zoo/BlazeFace/: blazeface_onnx.py
model_zoo/yolo/: yolov8n_onnx.py  (+1 more)
overrides/: main.html
runtime/: index.html
search/: search_index.json
stylesheets/: extra.css
(+45 files in other folders)
