[project]
name = "swatahvision"
version = "0.1.2"
description = "swatah vision Python package"
authors = [
    { name = "swatah.ai", email = "git@swatah.ai" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-python",
    "onnx",
    "onnxruntime",
    "openvino",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu"]

[project.urls]
Homepage = "https://github.com/VisionAI4Bharat/swatahvision"
Repository = "https://github.com/VisionAI4Bharat/swatahvision"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
